--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,9 @@
   font-family: 'Lato';
   letter-spacing: 0.02em;
 }
+button{
+  outline: none;
+}
 
 .wz-view-menu-group{
 
@@ -508,6 +511,78 @@
 
 /* HDD ZONE START */
 
+.hdd button{
+  border-radius: 18px;
+  padding: 0px 30px;
+}
+
+.hdd{
+
+  .mini{
+    width: 32px;
+	  height: 32px;
+	  border-radius: 20px;
+	  background-color: #2c3238;
+	  border: solid 2px #fff;
+  }
+  .preferences-hdd-payment-top{
+    .atras figure{
+      width: 17px;
+      background: url('@static/sprite-iconos.png') no-repeat;
+      background-size: 72px 28px;
+      background-position: 0px 0px;
+      height: 28px;
+      margin: 1px auto;
+    }
+    .mini-disco{
+      width: 36px;
+      background: url('@static/icono-hdd-titulo.png') no-repeat;
+      background-size: 36px 36px;
+      background-position: 0px 0px;
+      height: 36px;
+      border: none;
+    }
+    span{
+      font-size: 36px;
+      font-weight: bold;
+      margin-left: 10px;
+    }
+  }
+
+  .maxi{
+    width: 44px;
+	  height: 44px;
+    margin: auto;
+	  border-radius: 30px;
+	  background-color: #2c3238;
+	  border: solid 2px #fff;
+  }
+  .more-icon figure{
+    width: 28px;
+    background: url('@static/sprite-iconos.png') no-repeat;
+    background-size: 72px 27px;
+    background-position: -16px 0px;
+    height: 29px;
+    margin: 9px auto;
+  }
+  .minus-icon figure{
+    width: 28px;
+    background: url('@static/sprite-iconos.png') no-repeat;
+    background-size: 72px 27px;
+    background-position: -44px 0px;
+    height: 29px;
+    margin: 9px auto;
+  }
+  .ui-btn span{
+    max-width: none;
+  }
+
+  .ui-btn{
+    width: auto;
+  }
+}
+
+
 .premium-user{
   .free{
     display: none;
@@ -555,38 +630,46 @@
   font-size: 21px;
   color: white;
 
-  figure{
-    width: 18px;
-    height: 18px;
-    background: blue;
-  }
 }
 
 .preferences-hdd-payment-middle{
   display: flex;
   width: inherit;
-  color: white;
+  color: #c7d1d7;
 }
 
+.space-premium{
+  .big-box-hdd{
+    min-height: 257px;
+  }
+}
 
 .big-box-hdd{
 
-  width: 300px;
+  width: 330px;
   text-align: center;
   padding: 20px 0px;
   border-radius: 6px;
-  background: rgba(0,0,0,.5);
-  margin: 55px 0 0;
+  background: rgb(44, 50, 56);
+  margin: 55px 0 0 0;
 
+}
+
+.small-box-hdd.active{
+  border: solid 2px #60b25e;
 }
 
 .small-box-hdd{
 
-  width: 80px;
-  text-align: center;
-  padding: 10px;
-  border-radius: 6px;
-  background: rgba(0,0,0,.5);
+  width: 135px;
+  height: 85px;
+  padding-top: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 0px;
+  border-radius: 12px;
+  background-color: #2c3238;
+  border: solid 2px transparent;
 
 }
 .current-plan-options{
@@ -600,16 +683,113 @@
   margin-top: 40px;
   padding: 20px;
 
-  li{
-    /* Cambiar */
+  .li-circle figure{
+    background: #4698e0;
+    width: 22px;
+    height: 22px;
+    border-radius: 22px;
+  }
+  .li-circle article{
+    margin-left: 18px;
+    font-weight: bold;
+    font-size: 18px;
+  }
+  .li-circle{
+    display: flex;
+  }
+  .li-circle span{
+    margin-left: 17px;
+    color: white;
   }
   .paragraph{
-    padding: 15px 30px;
+    margin-left: 40px;
     font-size: 12px;
+    color: #b5bec5;
+  }
+}
+.space-premium{
+  .box-current-plan-middle{
+    padding: 10px 0px;
+    width: 297px !important;
+    margin: 18px 0px 0px 0px !important;
+
+    .premium-info{
+      color: white;
+      font-weight: bold;
+    }
+    .premium-date{
+      float: left;
+      margin-top: 28px !important;
+      font-weight: normal;
+    }
+  }
+}
+
+.card-active{
+  .info-current-card-bottom{
+    display: block !important;
+  }
+  .info-current-without-card-bottom{
+    display: none !important;
   }
 }
 
 .modify-premium{
+
+  .info-options{
+    .options-top{
+      display: block;
+      text-align: left;
+      margin-bottom: 20px;
+      .right{
+        text-align: right;
+      }
+      .left{
+        text-align: left;
+      }
+
+      .top{
+        color: white;
+        display: flex;
+        .right{
+          font-weight: normal;
+          width: 109px;
+        }
+        .left{
+          font-weight: bold;
+          font-size: 18px;
+          width: 160px;
+
+        }
+      }
+      .bottom{
+        font-size: 14px;
+        margin-top: 10px;
+      }
+
+    }
+    .options-middle{
+      text-align: left;
+    }
+
+    .options-bottom{
+      font-weight: bold;
+      text-align: left;
+      margin-top: 20px;
+        .bottom{
+          font-size: 18px;
+          margin-top: 10px;
+        }
+    }
+  }
+  .img-card{
+    background: url('@static/icono-tarjeta.png') no-repeat;
+    background-size: 52px 38px;
+    width: 52px;
+    height: 38px;
+    margin: 10px auto 10px auto;
+    transition: all .2s ease;
+  }
 
   .info-current-card{
     width: 300px;
@@ -623,22 +803,34 @@
 
 
       .info-current-card-bottom{
+        display: none;
         text-align: left;
         padding: 10px 0px;
 
         .number-credit-card{
           display: flex;
-          padding: 10px 0px;
-          background: rgba(0,0,0,.5);
+          padding: 10px 20px;
+          background: rgb(44, 50, 56);
           border-radius: 16px;
+          color: #c7d1d7;
 
           figure{
+            background: url('@static/icono-tarjeta.png') no-repeat;
+            background-size: 20px 40px;
             width: 40px;
+            height: 20px;
+            margin: 5px 0px;
+
+          }
+
+          .number-card{
+            margin-top: 6px;
+            margin-right: 18px;
           }
 
           .delete-card{
             font-size: 12px;
-            padding-top: 3px;
+            padding-top: 9px;
           }
         }
 
@@ -648,20 +840,34 @@
         }
 
       }
+      .info-current-without-card-bottom{
+        margin-top: 20px;
+        color: #c7d1d7;
+        .top{
+          color: white;
+          font-weight: bold;
+        }
+        .bottom{
+          font-size: 13px;
+          margin-top: 25px;
+          text-align: left;
+          margin-bottom: 25px;
+        }
+      }
 
       .info-current-card-left{
 
         .info-current-quantity{
-          margin-top: 160px;
+          margin-top: 140px;
           display: flex;
         }
       }
       .info-current-card-right{
         margin-left: 15px;
-        margin-top: 65px;
+        margin-top: 14px;
 
         .info-current-card-button.middle{
-          border-left: 1px dotted white;
+          border-left: 1px dashed #5e656b;
           padding: 10px 0px;
         }
 
@@ -692,11 +898,15 @@
 
 .more{
 
+  .info-current-plan{
+    width: 400px;
+  }
+
+
   .info-current-card{
-    width: 300px;
+    width: 417px;
     float: right;
     display: flex;
-    margin-left: 128px;
 
       .info-current-card-top{
         margin: 55px 0px 0px 0px;
@@ -710,8 +920,9 @@
         .number-credit-card{
           display: flex;
           padding: 10px 10px;
-          background: rgba(0,0,0,.5);
+          background: rgb(44, 50, 56);
           border-radius: 16px;
+          color: white;
 
           figure{
             width: 40px;
@@ -732,17 +943,32 @@
 
       .info-current-card-left{
 
+        width: 140px;
+
         .info-current-quantity{
-          margin-top: 160px;
+          margin-top: 140px;
           display: flex;
+          .quantity{
+            width: 87px;
+            color: #60b25e;
+            font-size: 48px;
+            text-align: right;
+          }
+          .quantity-container{
+            display: block;
+            font-size: 22px;
+            text-align: left;
+            color: white;
+
+          }
         }
       }
       .info-current-card-right{
         margin-left: 15px;
-        margin-top: 65px;
+        margin-top: 14px;
 
         .info-current-card-button.middle{
-          border-left: 1px dotted white;
+          border-left: 1px dashed #5e656b;
           padding: 10px 0px;
         }
 
@@ -753,26 +979,89 @@
 
                 }
                 .show-space-selected{
-                  width: 210px;
-                  height: 60px;
-                  background: #061221;
+                  width: 214px;
+                  height: 104px;
+                  background-color: #2c3238;
+                  border: solid 2px #60b25e;
+                  border-radius: 12px;
                   margin-left: 20px;
-                  padding-top: 20px;
+                  font-size: 18px;
                   color: white;
-                  border-radius: 10px;
-                  border: 1px solid #20ea20;
+
+                  .container{
+                    margin-top: 22px;
+                  }
 
                   .big-text{
-                    font-size: 30px;
+                    font-size: 56px;
+                    font-weight: bold; 
                   }
                 }
             }
         }
       }
-
 }
 
+
 .order{
+
+  .current-plan-options{
+    display: flex;
+    .current-plan-options-left{
+      display: block;
+      margin-top: 55px;
+
+      /*
+      Serrated edge
+      */
+
+      .current-top{
+        color:white;
+        background-color:#2B3A48;
+        text-align:center;
+        }
+      .current-top:after {
+        content: " ";
+        display: block;
+        position: relative;
+        top: 0px;
+        left: 0px;
+        width: inherit;
+        height: 7px;
+    background: linear-gradient(#3f4750 0%, transparent 0%), -webkit-linear-gradient(135deg, #2c3238 33.33%, transparent 33.33%) 0 0%, #3f4750 -webkit-linear-gradient(45deg, #2c3238 33.33%, #3f4750 33.33%) 0 0%;
+        background-repeat: repeat-x;
+        background-size: 7px 7px, 7px 7px;
+      }
+
+
+    .current-bottom{
+      color:white;
+      background-color:#2B3A48;
+      text-align:center;
+      }
+    .current-bottom:after {
+      content: " ";
+      display: block;
+      position: relative;
+      top: 0px;
+      left: 0px;
+      width: inherit;
+      height: 7px;
+    background: linear-gradient(#2c3238 0%, transparent 0%), -webkit-linear-gradient(135deg, #3f4750 33.33%, transparent 33.33%) 0 0%, #2c3238 -webkit-linear-gradient(45deg, #3f4750 33.33%, #2c3238 33.33%) 0 0%;
+    background-repeat: repeat-x;
+    background-size: 7px 7px, 7px 7px;
+    }
+
+    .big-box-hdd{
+      width: 330px;
+      text-align: center;
+      padding: 20px 0px;
+      background: #2c3238;
+      margin: 0px;
+      border-radius: 0px;
+    }
+    }
+  }
 
   .info-current-plan{
 
@@ -783,39 +1072,89 @@
       padding: 0px 30px;
 
       .options-top-tittle{
+        color: white;
         width: 240px;
         text-align: left;
       }
 
       .options-top-body{
-        width: 160px;
         display: block;
         text-align: left;
+        margin-top: 27px;
+        margin-bottom: 17px;
 
         .body-bottom{
+          color: white;
           display: flex;
+          margin-top: 17px;
+          .right{
+            width: 50%;
+            text-align: right;
+          }
+          .left{
+            width: 50%;
+            text-align: left;
+          }
         }
 
       }
     }
 
     .options-middle{
-      border-bottom: 1px solid white;
-      border-top: 1px solid white;
-      padding: 15px 10px;
+      border-bottom: 1px dashed #5e656b;
+      border-top: 1px dashed #5e656b;
+      padding: 17px 10px;
       margin: 10px 20px;
+      display: flex;
+      color: #60b25e;
+
+      .options-middle-left{
+        margin-left: 0px;
+        text-align: left;
+        width: 135px;
+        font-weight: bold;
+      }
+      .options-middle-right{
+        margin-right: 0px;
+        text-align: right;
+        width: 135px;
+      }
+
+
     }
 
     .options-bottom{
       display: block;
-      width: 150px;
       text-align: left;
       padding: 0px 30px;
+      width: 272px;
+      margin-top: 17px;
+      font-weight: bold;
+      .top{
+        display: flex;
+        .right{
+          width: 50%;
+          text-align: right;
+        }
+        .left{
+          width: 50%;
+          text-align: left;
+        }
+      }
+      .bottom{
+        margin-top: 15px;
+        display: flex;
+        color: white;
+        .right{
+          width: 50%;
+          text-align: right;
+        }
+        .left{
+          width: 50%;
+          text-align: left;
+        }
+      }
     }
-    .options-bottom span{
-      display: flex;
-    }
-
   }
 
 
@@ -833,9 +1172,29 @@
       .info-current-card-top{
         margin: 55px 0px 0px 0px;
       }
+
+
+      .img-card{
+        background: url('@static/icono-tarjeta.png') no-repeat;
+        background-size: 52px 38px;
+        width: 52px;
+        height: 38px;
+        margin: 10px auto 10px auto;
+        transition: all .2s ease;
+      }
+
       .info-current-card-bottom{
         text-align: left;
         padding: 10px 0px;
+
+        ::-webkit-input-placeholder {
+         color: white;
+        }
+        input{
+          color: white;
+          padding: 0px 7px;
+          background: transparent;
+        }
 
         article{
           margin-top: 10px;
@@ -844,12 +1203,12 @@
         .number-credit-card{
           display: flex;
           padding: 10px 10px;
-          background: rgba(0,0,0,.5);
+          background: rgb(44, 50, 56);
           border-radius: 16px;
+          color: white;
 
           input{
-            color: white;
-            background: transparent;
+            width: 265px;
           }
 
           figure{
@@ -865,48 +1224,48 @@
         .owner-credit-card{
           display: flex;
           padding: 10px 10px;
-          background: rgba(0,0,0,.5);
+          background: rgb(44, 50, 56);
           border-radius: 16px;
+          color: white;
+
 
           input{
-            color: white;
-            background: transparent;
+            width: 265px;
           }
+
         }
 
         .options-credit-card{
           display: flex;
 
           input{
-            width: 32px;
-            background: transparent;
-            color: white;
-          }
+            width: 47px;
 
+          }
           article{
-            max-width: 80px;
+            max-width: 60px;
             margin-top: 0px;
             margin-right: 10px;
           }
 
           .month-credit-card{
             display: flex;
-            padding: 10px 10px;
-            background: rgba(0,0,0,.5);
+            padding: 10px 7px;
+            background: rgb(44, 50, 56);
             border-radius: 16px;
           }
 
           .year-credit-card{
             display: flex;
-            padding: 10px 10px;
-            background: rgba(0,0,0,.5);
+            padding: 10px 7px;
+            background: rgb(44, 50, 56);
             border-radius: 16px;
           }
 
           .code-credit-card{
             display: flex;
-            padding: 10px 10px;
-            background: rgba(0,0,0,.5);
+            padding: 10px 7px;
+            background: rgb(44, 50, 56);
             border-radius: 16px;
           }
 
@@ -922,15 +1281,26 @@
       .info-current-card-left{
 
         .info-current-quantity{
-          margin-top: 160px;
+          margin-top: 140px;
           display: flex;
+          font-size: 24px;
+
+          .quantity{
+            color: #60b25e;
+            font-size: 48px;
+          }
+          .quantity-container{
+            display: block;
+            text-align: left;
+            color: white;
+          }
         }
       }
       .info-current-card-right{
         margin-left: 15px;
 
         .info-current-card-button.middle{
-          border-left: 1px dotted white;
+          border-left: 1px dashed #5e656b;
         }
 
         .info-current-card-button{
@@ -969,10 +1339,10 @@
     width: inherit;
 
     .img-finish{
-      background: red;
-      border-radius: 100%;
-      width: 30px;
-      height: 90px;
+      background: url('@static/aumento-listo.png') no-repeat;
+      background-size: 135px 135px;
+      width: 36px;
+      height: 96px;
       padding: 20px 50px;
       margin: 20px auto;
     }
@@ -984,20 +1354,24 @@
     text-align: center;
     padding-left: 52px;
     padding-top: 22px;
+    color: white;
 
     .info-space{
-      font-style: bold;
-      color: white;
+      font-weight: bold;
+
     }
   }
 
   .finish-bottom{
     margin-top: 70px;
 
-    article{
+    /*article{
       margin-left: auto;
+      padding-top: 7px;
       margin-right: auto;
+      height: 27px;
     }
+    */
   }
 
 
@@ -1022,9 +1396,9 @@
   }
 
   .options-middle{
-    border-bottom: 1px solid white;
-    border-top: 1px solid white;
-    padding: 15px 10px;
+    border-bottom: 1px dashed #5e656b;
+    border-top: 1px dashed #5e656b;
+    padding: 17px 10px;
     margin: 10px 20px;
   }
 
@@ -1035,35 +1409,46 @@
   }
 
 }
-
+.order{
+  .preferences-hdd-payment-bottom{
+    margin-right: 50px;
+  }
+  .ui-input{
+    height: 20px;
+  }
+}
 
 
 .preferences-hdd-payment-bottom{
   position: relative;
   float: right;
   display: block;
+  margin-right: 10px;
 }
 
 
 .box-current-plan{
-  background: rgba(0, 0, 0, 0.5);
-  height: auto;
-  width: 375px;
+  background: #2c3238;
+  height: 205px;
+  padding: 10px 0px 0px 20px;
+  width: 314px;
   text-align: left;
-  padding: 8px 20px;
   float: right;
-  margin-left: 114px;
+  margin-left: 100px;
   margin-top: 55px;
   border-radius: 6px;
-  max-height: 240px;
+  font-weight: bold;
 
 
       .box-current-plan-top{
         margin-top: 8px;
+        width: 300px;
+
       }
 
       .box-current-plan-middle{
-        margin-top: 8px;
+        width: 210px;
+        margin: 20px auto 0px auto;
 
         .premium-version{
           height: 70px;
@@ -1085,19 +1470,58 @@
             }
         }
 
-        .free{
-          background: wheat;
-          height: 113px;
-          color: black;
+        .free-info{
+          height: 80px;
+          color: white;
+
+            .info-plan-premium{
+              display: flex;
+              width: 210px;
+              margin: auto;
+              text-align: left;
+              height: 75px;
+
+                .left{
+                  font-size: 75px;
+                  font-weight: bold;
+                  line-height: 60px;
+                }
+                .middle{
+                  width: 40px;
+                  .top{
+                    font-size: 24px;
+                    font-weight: bold;
+                  }
+                  .bottom{
+                    font-size: 17px;
+                  }
+
+                }
+                .right{
+                  .top{
+                    font-size: 24px;
+                    font-weight: normal;
+                  }
+                  .bottom{
+                    font-size: 14px;
+
+                    .big-text{
+                      font-size: 37px;
+                      font-weight: normal;
+                    }
+                  }
+
+                }
+            }
+
         }
 
       }
 
-
       .box-current-plan-bottom{
         height: 34px;
-        width: 81px;
-        margin: 25px auto;
+        width: 300px;
+        margin: 10px auto 0px auto;
         text-align: center;
     }
 }
@@ -1122,14 +1546,12 @@
 }
 
 .preferences-hdd-cake{
-
-    width: 218px;
-    height: 218px;
+    width: 47px;
+    height: 63px;
     display: inline-block;
-    background: url('@static/quora.png') no-repeat;
-    background-size: 218px 218px;
+    background: url('@static/icono-hdd.png') no-repeat;
+    background-size: 47px 63px;
     position: relative;
-
 }
 .preferences-hdd-cake-total{
 
