--- a/static/style.css
+++ b/static/style.css
@@ -653,7 +653,25 @@ button{
   background: rgb(44, 50, 56);
   margin: 55px 0 0 0;
 
+  .usage-circle{
+    background: url('@static/elipse.png') no-repeat;
+    width: 238px;
+    margin: 0px auto;
+    height: 238px;
+    background-size: 238px 238px;
+  }
 }
+
+
+.preferences-hdd-canvas-cake{
+    margin-top: -115px;
+    margin-left: -2px;
+}
+.preferences-hdd-cake-circle{
+  text-align: center;
+  width: 80px;
+}
+
 
 .small-box-hdd.active{
   border: solid 2px #60b25e;
@@ -815,22 +833,26 @@ button{
           color: #c7d1d7;
 
           figure{
-            background: url('@static/icono-tarjeta.png') no-repeat;
-            background-size: 20px 40px;
-            width: 40px;
-            height: 20px;
-            margin: 5px 0px;
+            background: url('@static/visa.png') no-repeat;
+            background-size: 25px 8px;
+            /*  VISA  */
+            width: 25px;
+            margin: 0px 0px;
+            margin-top: 7px;
+            margin-right: 11px;
 
           }
 
           .number-card{
-            margin-top: 6px;
+            margin-top: 2px;
             margin-right: 18px;
           }
-
+          .delete-card:hover{
+            color: white;
+          }
           .delete-card{
             font-size: 12px;
-            padding-top: 9px;
+            padding-top: 4px;
           }
         }
 
@@ -852,6 +874,13 @@ button{
           margin-top: 25px;
           text-align: left;
           margin-bottom: 25px;
+        }
+        .img-add-card{
+          background: url('@static/add-tarjeta.png') no-repeat;
+          background-size: 37px 23px;
+          width: 37px;
+          height: 23px;
+          margin: 25px auto 10px auto;
         }
       }
 
@@ -1552,6 +1581,7 @@ button{
     background: url('@static/icono-hdd.png') no-repeat;
     background-size: 47px 63px;
     position: relative;
+    margin-top: 48px;
 }
 .preferences-hdd-cake-total{
 
@@ -1561,18 +1591,21 @@ button{
     text-align: center;
     color: #FFFFFF;
     position: absolute;
-    top: 120px;
+    top: 83px;
+    left: 0px;
 
 }
+
 
 .preferences-hdd-cake-free{
 
     font-size: 14px;
     color: #FFF;
-    width: 100%;
+    width: 104px;
     text-align: center;
     position: absolute;
-    top: 145px;
+    top: 107px;
+    left: -28px;
 
 }
 
